# boundform

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml
.claude/skills/: skills_config.json
.claude/skills/boundform-guide/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/resolve-issue/: SKILL.md  Workflow.md  skill_config.json
.claude/skills/review/: SKILL.md
.claude/skills/review-respond/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/setup-check/: SKILL.md
.claude/skills/spa-analyze/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/actions/resolve-version/: action.yml
.github/workflows/: release.yml
docs/: DESIGN_DECISIONS.md  LOCAL_DEVELOPMENT.md
docs/adr/: 0001-form-identifier-resolution.md  0002-form-identifier-by-selector-and-index.md  0003-authentication-support.md  0004-release-and-distribution.md  0005-html-attributes-as-validation-surface.md
docs/usage/: nextjs.md  react-spa.md  sveltekit.md
examples/sample-app/: boundform.yml  index.html
npm/: package.json
npm/scripts/: download-binary.js  init.js
npm/templates/: boundform.yml
reviews/0001-2026-03-16/: claude-review.md  codex-review.md  summary.md
src/: comparator.rs  config.rs  error.rs  main.rs  model.rs  parser.rs  reporter.rs  source.rs
tests/: integration_test.rs
tests/fixtures/: boundform.yml  boundform_mismatch.yml  no_form.html  register.html  settings.html
(+9 files in other folders)
