[package]
name = "boundform"
version = "0.1.6"
edition = "2024"
description = "Generate boundary-value tests from HTML form constraints, no browser required"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
serde_yml = "0.0.12"
indexmap = { version = "2", features = ["serde"] }
url = "2"
